Drop Distant Horizons + EntityCulling; add Chunky; view-distance 16/sim 8; seed -7833842402223417925; backup.sh; Create learning tips